# VKUTK

./: .gitattributes  .gitignore  AUTH_SETUP.md  INTEGRATION.md  MULTI_USER_SETUP.md  README.md  docker-compose.yml  start_all.bat
Backend/: Dockerfile  UI_main.py  UV_SETUP.md  api_server.py  auth_utils.py  cog_loader.py  environment.yml  main.py  pyproject.toml  requirements.txt  requirements_api.txt  start_api.bat  test_api.py
Backend/BrownserUse/: COOKIES_GUIDE.md  cookies.txt  login_with_cookies_browseruse.py  main.py  pyproject.toml
Backend/BrownserUse/chrome_profile/: Breadcrumbs  Local State
Backend/BrownserUse/chrome_profile/Default/: DIPS-wal  Favicons  (+6 more)
Backend/ManualScrape/: README.md  cookies.csv  login_simple.py  login_with_cookies.py  requirements.txt
Backend/ManualScrape/VKU_scraper/: FASTAPI_SETUP.md  api.py  diem_tong_ket.csv  hoc_phan.py  profile.csv  run_api.bat  scraper.py  scraper_to_supabase.py  session.json  session_get.py  ten_hoc_phan.csv  thong_tin_ca_nhan.csv  thong_tin_ca_nhan.py  tien_do_hoc_tap.html  tong_ket.py  vku_scraper.py
Backend/Supabase/: Announcement.py  DBconnect.py  DanhSachLopHP.py  Database.py  Diem.py  FBPost.py  SinhVien.py  TienDoHocTap.py  __init__.py  api_announcement.py  auth.py  base.py  client.py  course_schedule.py  databasesql.txt
Backend/cogs/: __init__.py  announcement_cog.py  base_cog.py  chat_cog.py  chatnlp_cog.py  documents_cog.py  example_cog.py  n8n_chatbot_cog.py  n8n_webhook_cog.py  questions_cog.py  research_cog.py  score_cog.py  stackoverflow_cog.py  summary_cog.py  timetable_cog.py  topcv_cog.py
(+393 files in other folders)
