[project]
name = "backend"
version = "0.1.0"
description = "VKU Session Capture API with FastAPI and Playwright"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.115.0",
    "pandas>=2.0.0",
    "playwright>=1.48.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "requests>=2.31.0",
    "rich>=14.2.0",
    "selenium>=4.15.0",
    "supabase>=2.3.0",
    "uvicorn[standard]>=0.32.0",
    "webdriver-manager>=4.0.0",
    "httpx>=0.28.1",
]
